[gd_scene load_steps=34 format=3 uid="uid://chbca1icmanma"]

[ext_resource type="Script" uid="uid://cvl6qkiqptpt6" path="res://NPC/npc/npc.gd" id="1_vmucx"]
[ext_resource type="Texture2D" uid="uid://bhbhqh7gfhftg" path="res://Resources/entities/spear_guard/Sprite-0004.png" id="2_eac2u"]
[ext_resource type="PackedScene" uid="uid://c13m6iksgp46u" path="res://Utility/direction/direction.tscn" id="3_uotyv"]
[ext_resource type="PackedScene" uid="uid://deiouofjr0ovf" path="res://NPC/AI/melee_AI/Melee_AI.tscn" id="4_7keli"]
[ext_resource type="PackedScene" uid="uid://clprebcrnjspd" path="res://NPC/AI/Wonder_AI/wonder_AI.tscn" id="5_ulprw"]
[ext_resource type="PackedScene" uid="uid://b1vo5d7c2epps" path="res://NPC/AI/Patrol_AI/Patrol_AI.tscn" id="6_uer34"]
[ext_resource type="PackedScene" uid="uid://brixvj42o7ofg" path="res://NPC/fov/npc_fov.tscn" id="7_7keli"]
[ext_resource type="Script" uid="uid://cemvtjwsihfye" path="res://NPC/hit_detection/hit_detection.gd" id="8_ulprw"]
[ext_resource type="Script" uid="uid://yjb52mvvfm5" path="res://Player/abilities/attack_base/attack.gd" id="9_5mlca"]
[ext_resource type="Script" uid="uid://mvia3ckessfh" path="res://Utility/Raycast_Handler/raycast_handler.gd" id="10_oeiu7"]
[ext_resource type="PackedScene" uid="uid://5l2hc1xxi6ag" path="res://Utility/Raycast_Handler/raycast_handler.tscn" id="11_4uvfn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5mlca"]
atlas = ExtResource("2_eac2u")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeiu7"]
atlas = ExtResource("2_eac2u")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4uvfn"]
atlas = ExtResource("2_eac2u")
region = Rect2(256, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0n4i"]
atlas = ExtResource("2_eac2u")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bxly"]
atlas = ExtResource("2_eac2u")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qyyf"]
atlas = ExtResource("2_eac2u")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5yxf"]
atlas = ExtResource("2_eac2u")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd672"]
atlas = ExtResource("2_eac2u")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtqec"]
atlas = ExtResource("2_eac2u")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hs12"]
atlas = ExtResource("2_eac2u")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_daii1"]
atlas = ExtResource("2_eac2u")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh7ci"]
atlas = ExtResource("2_eac2u")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lac7b"]
atlas = ExtResource("2_eac2u")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_legvq"]
atlas = ExtResource("2_eac2u")
region = Rect2(512, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g23s6"]
atlas = ExtResource("2_eac2u")
region = Rect2(576, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_x0n4i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mlca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeiu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mlca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uvfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mlca")
}],
"loop": false,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0n4i")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bxly")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qyyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5yxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd672")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtqec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hs12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daii1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh7ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lac7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_legvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g23s6")
}],
"loop": false,
"name": &"moving",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_moies"]
radius = 36.0
height = 164.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uer34"]
size = Vector2(56, 140)

[sub_resource type="Animation" id="Animation_0qyyf"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2bxly"]
resource_name = "attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attacking"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.84, 1.03333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g5yxf"]
_data = {
&"RESET": SubResource("Animation_0qyyf"),
&"attack": SubResource("Animation_2bxly")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fd672"]
radius = 8.0152
height = 78.0131

[node name="GuardSpear" type="CharacterBody2D" node_paths=PackedStringArray("normal_AI", "combat_AI", "alert_AI") groups=["npc"]]
collision_layer = 0
script = ExtResource("1_vmucx")
normal_AI = NodePath("WonderAi")
combat_AI = NodePath("MeleeAi")
alert_AI = NodePath("WonderAi")
metadata/_custom_type_script = "uid://cvl6qkiqptpt6"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.53946, 2.53946)
sprite_frames = SubResource("SpriteFrames_x0n4i")
animation = &"idle"

[node name="Direction" parent="." instance=ExtResource("3_uotyv")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_moies")

[node name="MeleeAi" parent="." instance=ExtResource("4_7keli")]
attempt_attack_range = 120.0

[node name="WonderAi" parent="." instance=ExtResource("5_ulprw")]

[node name="PatrolAi" parent="." instance=ExtResource("6_uer34")]

[node name="NpcFov" parent="." instance=ExtResource("7_7keli")]
position = Vector2(4, 14)

[node name="Hit_Box" type="Area2D" parent="."]
script = ExtResource("8_ulprw")
metadata/_custom_type_script = "uid://cemvtjwsihfye"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_Box"]
position = Vector2(9, 10)
shape = SubResource("RectangleShape2D_uer34")

[node name="Attack" type="Area2D" parent="."]
monitoring = false
script = ExtResource("9_5mlca")
metadata/_custom_type_script = "uid://yjb52mvvfm5"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Attack"]
libraries = {
&"": SubResource("AnimationLibrary_g5yxf")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2(69, 18)
rotation = 1.57852
shape = SubResource("CapsuleShape2D_fd672")

[node name="wall" type="Node2D" parent="."]
script = ExtResource("10_oeiu7")
metadata/_custom_type_script = "uid://mvia3ckessfh"

[node name="RayCast2D2" type="RayCast2D" parent="wall"]
position = Vector2(4, 22)
target_position = Vector2(40, 0)

[node name="ground" parent="." instance=ExtResource("11_4uvfn")]

[node name="RayCast2D" type="RayCast2D" parent="ground"]
position = Vector2(42, 57)
target_position = Vector2(0, 41)

[connection signal="attack" from="MeleeAi" to="Attack" method="attack"]
[connection signal="animation_finished" from="Attack/AnimationPlayer" to="MeleeAi" method="attack_finished"]
