[gd_scene load_steps=14 format=3 uid="uid://cgl75nfhfrfia"]

[ext_resource type="Script" uid="uid://bs75y52fkfx4d" path="res://Player/forms/human/human_form.gd" id="1_nhyly"]
[ext_resource type="PackedScene" uid="uid://d4g2daqok5rfd" path="res://Player/movement/humaniod_player_movement.tscn" id="2_hxqw4"]
[ext_resource type="SpriteFrames" uid="uid://i4x6x1uey22t" path="res://Player/forms/human/human.tres" id="3_8y7ay"]
[ext_resource type="PackedScene" uid="uid://c13m6iksgp46u" path="res://Utility/direction/direction.tscn" id="5_uakvs"]
[ext_resource type="Script" uid="uid://yjb52mvvfm5" path="res://Player/abilities/attack_base/attack.gd" id="6_lpxol"]
[ext_resource type="PackedScene" uid="uid://c6ie4wb6e3uhs" path="res://Maps/light_detector/light_detector.tscn" id="6_ndvua"]
[ext_resource type="PackedScene" uid="uid://b1wjxfp0rv3xy" path="res://Player/poof.tscn" id="7_ndvua"]
[ext_resource type="Script" uid="uid://cemvtjwsihfye" path="res://NPC/hit_detection/hit_detection.gd" id="8_6h48p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0foxj"]
radius = 38.0
height = 140.0

[sub_resource type="Animation" id="Animation_ndvua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_lpxol"]
resource_name = "attack"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.46),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"attack", &"idle"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6h48p"]
_data = {
&"RESET": SubResource("Animation_ndvua"),
&"attack": SubResource("Animation_lpxol")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tn1dn"]
size = Vector2(64, 124)

[node name="HumanForm" type="CharacterBody2D" groups=["player"]]
collision_layer = 130
wall_min_slide_angle = 1.06989
script = ExtResource("1_nhyly")

[node name="Humaniod_Player_Movement" parent="." instance=ExtResource("2_hxqw4")]
speed_limit = 400.0
horizontal_move_speed = 10000

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2.03014, 2.03014)
sprite_frames = ExtResource("3_8y7ay")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
scale = Vector2(0.815382, 0.908192)
shape = SubResource("CapsuleShape2D_0foxj")

[node name="Direction" parent="." instance=ExtResource("5_uakvs")]

[node name="Attack" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
script = ExtResource("6_lpxol")
metadata/_custom_type_script = "uid://yjb52mvvfm5"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Attack"]
libraries = {
&"": SubResource("AnimationLibrary_6h48p")
}

[node name="Polygon2D" type="Polygon2D" parent="Attack"]
visible = false
polygon = PackedVector2Array(41, -9, 148, -7, 146, 13, 44, 16)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Attack"]
scale = Vector2(0.521002, 4.35611)
polygon = PackedVector2Array(44.1457, -7.80512, 228.406, -7.57556, 172.744, 11.4781, 42, 14)

[node name="LightDetector" parent="." instance=ExtResource("6_ndvua")]

[node name="Poof" parent="." instance=ExtResource("7_ndvua")]

[node name="Hit_Box" type="Area2D" parent="."]
script = ExtResource("8_6h48p")
metadata/_custom_type_script = "uid://cemvtjwsihfye"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_Box"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_tn1dn")

[connection signal="property_list_changed" from="Direction" to="Direction" method="_on_property_list_changed"]
[connection signal="area_entered" from="Attack" to="Attack" method="_on_area_entered"]
[connection signal="attack_done" from="Attack" to="." method="_on_attack_attack_done"]
